--- a/assets/css/navbar-style.css
+++ b/assets/css/navbar-style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/* colors */
 :root {
     --light: #fff;
     --primary-color: #0f3750ff;
@@ -13,7 +14,7 @@
 /* NavBar config */
 body .navbar {
     width: 100%;
-    height: 80px;
+    height: 100px;
     background-color: var(--primary-color);
     display: flex;
     align-items: center;
@@ -28,27 +29,50 @@ body .navbar .search-bar {
     gap: 30px;
 }
 
+body .navbar .search{
+    display: flex;
+    align-items: center ;
+}
+
 body .navbar .search-bar .search input {
-    border-radius: 20px;
+    border-radius: 25px;
     width: 250px;
     outline: none;
     border: none;
-    padding: 5px 5px 5px 20px;
+    padding: 10px 10px 10px 20px;
 }
 
 body .navbar .search-bar .search button{
     position: relative;
-    right: 37px;
+    right: 40px;
     background-color: var(--primary-color);
     border-radius: 50%;
     border: none;
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
+}
+
+body .navbar .search-bar .search button:hover{
+    transition: 0.5s;
+    background-color: var(--secondary-color);
 }
 
 body .navbar .search-bar .search button i{
     color: var(--light);
 }
+
+body .navbar .search-bar .search i.fa-microphone{
+    color: var(--secondary-color);
+    font-size: 24px;
+    margin: 0;
+    padding: 0;
+}
+
+body .navbar .search-bar .search i.fa-microphone:hover{
+    transition: 0.5s;
+    transform: scale(0.90);
+}
+
 
 /* Profile account photo */
 body .navbar .account-photo-container {
