--- a/assets/css/home-style.css
+++ b/assets/css/home-style.css
@@ -11,8 +11,8 @@
     --secondary-color: #1cc3dcff;
 }
 
-/* Home left */
 
+/* Main config */
 main{
     display: flex;
     flex-direction: column;
@@ -21,8 +21,16 @@ main{
 main section{
     display: flex;
     width: 100%;
+    height: 100vh;
+}
+
+main .main-menu{
+    display: flex;
+    width: 100%;
     height: calc(100dvh - 100px);
 }
+
+/* Home left */
 
 aside.aside-container-left{
     margin: 0;
@@ -74,6 +82,7 @@ div.container-left p{
 .aside-container-left div.recomendation-buttons button:active{
     transform: scale(0.95);
 }
+
 /* Home right */
 
 aside.aside-container-right{
@@ -95,3 +104,57 @@ div.intro-photo-container{
     justify-content: center;
 }
 
+/* Recommendation videos display */
+
+section.feed-display{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+section.feed-display .videos-display{
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: 150px;
+}
+
+section.feed-display .videos-display .video-container{
+    display: flex;
+    flex-direction: column;
+}
+
+section.feed-display .videos-display .video-container .video-informations{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 15px;
+    justify-content: space-between;
+    padding: 0 20px 0 20px;
+}
+
+.video-container .video-informations i{
+    font-size: 30px;
+}
+
+p.video-title{
+    margin-bottom: 0;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.video-container .video-informations .author-account-container{
+    background-color: aqua;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+section.feed-display .videos-display .video-container .video-thumbnail{
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    width: 500px;
+    height: 300px;
+}
