Modificação do estilo do menu login, adicionando imagem da logo e loader adicionado

--- a/assets/css/navbar-style.css
+++ b/assets/css/navbar-style.css
@@ -42,6 +42,14 @@ body .navbar ul.nav-list {
 
 /* Employify logo */
 
+body .navbar img.logo{
+    width: 70px;
+}
+
+body .navbar img.logo:hover{
+    cursor: pointer;
+}
+
 /* Search bar */
 body .navbar .nav-logo-search {
     display: flex;
