--- a/assets/css/home-style.css
+++ b/assets/css/home-style.css
@@ -30,7 +30,7 @@ main .main-menu {
     display: flex;
     width: 100%;
     height: calc(100dvh);
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color-hover);
     color: var(--light);
 }
 
@@ -79,7 +79,7 @@ div.container-left p {
 
 .aside-container-left div.recomendation-buttons button:hover {
     transition: 0.5s;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color-light);
     /* background: linear-gradient(to bottom, var(--primary-color), var(--secondary-color)); */
 }
 
