--- a/auth/assets/css/login-style.css
+++ b/auth/assets/css/login-style.css
@@ -26,7 +26,7 @@ body {
 /* Login container */
 div.login-container {
     width: 500px;
-    height: 700px;
+    padding: 50px 0 50px 0;
     background-color: var(--primary-color);
     border-radius: 40px;
     display: flex;
