--- a/assets/css/navbar-style.css
+++ b/assets/css/navbar-style.css
@@ -12,18 +12,20 @@
     --primary-color-light-hover: #174c6d;
     --secondary-color: #1cc3dcff;
     --secondary-color-hover: #168899;
+    --background:  radial-gradient(circle, rgba(9,31,47,1) 0%, rgba(9,31,47,1) 66%, rgba(17,58,83,1) 100%);
 }
 
 /* NavBar config */
 body .navbar {
     width: 100%;
     height: 100px;
-    background-color: var(--primary-color);
+    background: transparent;
     display: flex;
     align-items: center;
     padding: 0 30px;
     color: var(--light);
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+    /* background: var(--background); */
     position: fixed;
 }
 
