Ajustes nos modelos de thumbnail dos videos

--- a/assets/css/navbar-style.css
+++ b/assets/css/navbar-style.css
@@ -26,6 +26,7 @@ body .navbar {
     color: var(--light);
     transition: 1.5s;
     position: fixed;
+    z-index: 999;
 }
 
 body .navbar ul li {
