--- a/assets/css/home-style.css
+++ b/assets/css/home-style.css
@@ -12,7 +12,7 @@
     --primary-color-light-hover: #174c6d;
     --secondary-color: #1cc3dcff;
     --secondary-color-hover: #168899;
-    --background:  radial-gradient(circle, rgba(9,31,47,1) 0%, rgba(9,31,47,1) 66%, rgba(17,58,83,1) 100%);
+    --background: radial-gradient(circle, rgba(9, 31, 47, 1) 0%, rgba(9, 31, 47, 1) 66%, rgba(17, 58, 83, 1) 100%);
 }
 
 /* Main config */
@@ -35,7 +35,7 @@ main .main-menu {
     color: var(--light);
 }
 
-main .main-menu .main-container{
+main .main-menu .main-container {
     margin-top: 100px;
 }
 
@@ -85,7 +85,6 @@ div.container-left p {
 .aside-container-left div.recomendation-buttons button:hover {
     transition: 0.5s;
     background-color: var(--secondary-color-hover);
-    /* background: linear-gradient(to bottom, var(--primary-color), var(--secondary-color)); */
 }
 
 .aside-container-left div.recomendation-buttons button:active {
@@ -117,7 +116,8 @@ section.feed-display {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--primary-color-light);
+    background: var(--background);
+    color: var(--light);
 }
 
 section.feed-display .videos-display {
@@ -137,7 +137,7 @@ section.feed-display .videos-display .video-container .video-informations {
     gap: 20px;
     margin-bottom: 15px;
     justify-content: space-between;
-    padding: 0 20px 0 20px;
+    padding: 0 0 0 20px;
 }
 
 section.feed-display .videos-display .video-container .video-informations .author-and-title {
@@ -149,10 +149,17 @@ section.feed-display .videos-display .video-container .video-informations .autho
 
 .video-container .video-informations i {
     font-size: 30px;
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 60px;
 }
 
 .video-container .video-informations i:hover {
     cursor: pointer;
+    background-color: var(--primary-color-light-hover);
 }
 
 p.video-title {
@@ -177,3 +184,62 @@ section.feed-display .videos-display .video-container .video-thumbnail {
     width: 500px;
     height: 300px;
 }
+
+/* Dropdown */
+
+.dropdown button i {
+    transition: 0.5s;
+    color: var(--secondary-color);
+}
+
+.dropdown .dropdown-menu i {
+    color: var(--secondary-color);
+    font-size: 24px;
+    border-radius: 50%;
+    padding: 12px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 48px;
+    height: 48px;
+    transition: 0.5s;
+}
+
+.dropdown button {
+    border: none;
+    padding: 0 !important;
+}
+
+.dropdown .dropdown-menu {
+    background-color: var(--primary-color-light);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    padding: 5px;
+    border-radius: 10px;
+    min-width: 250px;
+}
+
+.dropdown .dropdown-menu li a.dropdown-item {
+    display: flex;
+    align-items: center;
+    color: var(--light);
+    border-radius: 8px;
+    justify-content: left;
+}
+
+.dropdown .dropdown-menu li:hover a,
+.dropdown .dropdown-menu li a:active,
+.dropdown .dropdown-menu li a:focus {
+    background-color: var(--primary-color-light-hover);
+}
+
+.dropdown .dropdown-menu li a.dropdown-item div {
+    display: flex;
+    height: 100%;
+    align-items: center;
+}
+
+.dropdown .dropdown-menu li a.dropdown-item p {
+    margin: 0;
+}
+
+/*  */
