Menu lateral quase pronto (adicionar links com as outras partes do projeto)

--- a/assets/css/navbar-style.css
+++ b/assets/css/navbar-style.css
@@ -263,3 +263,13 @@ input:focus+.slider {
 input:checked+.slider:before {
     transform: translateX(1em);
 }
+
+/* NavBar Shifted transition */
+
+nav .user-profile {
+    transition: margin-right 0.3s ease-in-out;
+}
+
+nav .user-profile.shifted {
+    margin-right: 250px;
+}
