--- a/assets/css/home-style.css
+++ b/assets/css/home-style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 /* colors */
@@ -81,7 +81,7 @@ div.container-left p {
     outline: none;
     width: 200px;
     padding: 20px 0 20px 0;
-    border-radius: 20px;
+    border-radius: 25px;
     text-transform: uppercase;
     font-weight: 500;
     color: var(--light);
@@ -194,9 +194,15 @@ section.feed-display .videos-display .video-container .video-thumbnail {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 30px;
+    border-radius: 60px;
     width: 500px;
     height: 300px;
+    transition: width 0.3s ease, height 0.3s ease;
+}
+
+.side-menu.open ~ section.feed-display .videos-display .video-container .video-thumbnail {
+    width: 400px;
+    height: 250px;  
 }
 
 /* Dropdown */
@@ -259,41 +265,71 @@ section.feed-display .videos-display .video-container .video-thumbnail {
 
 /* Offcanvas */
 
-/* Estilo do menu lateral */
+main {
+    transition: margin-right 0.3s ease-in-out;
+}
+
+main.shifted {
+    margin-right: 250px;
+}
+
 .side-menu {
     position: fixed;
-    top: 0;
     right: -250px;
     height: 100%;
     width: 250px;
-    background-color: var(--light);
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
-    transition: left 0.3s ease-in-out;
-    z-index: 1000;
+    background: var(--background);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    transition: right 0.3s ease-in-out;
+    z-index: 9999;
+    overflow-y: scroll;
+    scrollbar-width: none; 
+    -ms-overflow-style: none;
+}
+
+.side-menu::-webkit-scrollbar {
+    display: none;
+}
+
+.menu-content {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    color: var(--light);
 }
 
 .menu-content p {
-    padding: 10px 15px;
+    padding: 15px 15px;
     cursor: pointer;
+    width: 90%;
     margin: 5px 0;
     text-align: center;
     background-color: var(--secondary-color);
-    border-radius: 5px;
+    border-radius: 25px;
     color: var(--light);
+    text-transform: uppercase;
+}
+
+.menu-content p:hover{
+    background-color: var(--secondary-color-hover);
+    transition: 0.5s;
 }
 
 .side-menu-btn {
     position: fixed;
     top: 50%;
     border-radius: 50%;
-    right: -25px;
+    right: -15px;
     transform: translateY(-50%);
     padding: 15px 20px 15px 10px;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     border: none;
     cursor: pointer;
-    z-index: 1100;
     transition: right 0.3s ease-in-out;
+    z-index: 2;
 }
 
 .side-menu-btn i {
@@ -301,10 +337,14 @@ section.feed-display .videos-display .video-container .video-thumbnail {
     color: var(--light);
 }
 
-.side-menu.active {
-    left: 0;
+.side-menu.open {
+    right: 0;
 }
 
-.side-menu.active .side-menu-btn {
-    right: 200px;
+hr {
+    width: 95%; 
+    height: 2px; 
+    border: none; 
+    background-color: var(--light); 
+    margin: 20px 0; 
 }
