--- a/assets/css/general-style.css
+++ b/assets/css/general-style.css
@@ -7,6 +7,30 @@
     --secondary-color-hover: #168899;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+}
+
+main section {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+}
+
+main .main-menu {
+    display: flex;
+    width: 100%;
+    height: calc(100dvh);
+    background: var(--background);
+    color: var(--light);
+}
+
+main .main-menu .main-container {
+    display: flex;
+    margin-top: 100px;
+}
+
 .dots-container {
     display: flex;
     align-items: center;
