Adicionando funcionalidades e inicio do chat

--- a/users/assets/css/profile-style.css
+++ b/users/assets/css/profile-style.css
@@ -98,7 +98,7 @@ main a i.fa-chevron-down:hover{
 .user-data div.user-photo-container{
     width: 280px;
     height: 280px;
-    background-color: red;
+    overflow: hidden;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -109,6 +109,14 @@ main a i.fa-chevron-down:hover{
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+}
+
+.user-data div.user-photo-container:hover{
+    cursor: pointer;
+    background-color: #091f2f;
+    transition: 0.5s;
+    opacity: 0.7;
 }
 
 .user-data .user-about{
