--- a/users/assets/css/chat-style.css
+++ b/users/assets/css/chat-style.css
@@ -26,22 +26,45 @@ main {
 main section {
     display: flex;
     width: 100%;
-    padding: 100px;
-    height: calc(100dvh - 100px);
+    padding: 20px 100px 100px 100px;
+    height: auto;
     margin-top: 100px;
     flex-direction: column;
 }
 
 /* Text Container */
 
-.container{
+.chat-container{
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: end;
+    gap: 50px;
 }
 
-.container img{
+.display-user{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 20px;
+}
+
+.display-IA{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 20px;
+}
+
+
+.display-user img,
+.display-IA img{
     width: 60px;
     border-radius: 50%;
+}
+
+.display-IA img{
+    background-color: var(--light);
 }
 
 .text-container{
@@ -58,4 +81,30 @@ main section {
 
 .ia-text-container{
     background-color: var(--secondary-color-hover);
+}
+
+/* Keyboard */
+
+.keyboard-container{
+    display: flex; 
+    position: fixed;
+    width: 80%;
+}
+
+.keyboard-container i{
+    position: absolute;
+    right: 25px;
+    top: 25px;
+}
+
+.keyboard{
+    outline: none;
+    border: none;
+    background-color: var(--primary-color-light);
+    color: var(--light);
+    padding: 20px;
+    border-radius: 30px;
+    /* position: fixed; */
+    margin-bottom: 40px;
+    width: 100%;
 }
